# oss-maintainer-kit

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  feature_request.md  issue-triage-checklist.md  pyproject.toml  readme-checklist.md
.github/workflows/: test.yml
src/oss_maintainer_kit/: __init__.py  cli.py
