[project]
name = "oss-maintainer-kit"
version = "0.1.0"
description = "A starter toolkit for learning open-source maintainer workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Your Name"}
]

[project.scripts]
oss-maintainer-kit = "oss_maintainer_kit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
